[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "do-interview-leaderboard-api"
version = "0.1.0"
description = "FastAPI leaderboard API backed by Redis sorted sets"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.110.0,<1.0.0",
  "uvicorn[standard]>=0.27.0,<1.0.0",
  "redis>=5.0.1,<6.0.0",
  "pydantic>=2.6.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0,<9.0.0",
  "httpx>=0.26.0,<1.0.0",
  "ruff>=0.3.0,<1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]
ignore = ["B008"]
